load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = [
        "access_request.go",
        "accountrecovery.go",
        "app.go",
        "appserver.go",
        "assertion_info.go",
        "audit.go",
        "authentication.go",
        "authority.go",
        "cluster_alert.go",
        "clustername.go",
        "connection_diagnostic.go",
        "constants.go",
        "database.go",
        "database_permissions.go",
        "databaseserver.go",
        "databaseservice.go",
        "derived.gen.go",
        "desktop.go",
        "device.go",
        "device.pb.go",
        "duration.go",
        "events.go",
        "extension.go",
        "github.go",
        "headlessauthn.go",
        "installer.go",
        "instance.go",
        "integration.go",
        "integration_awsoidc.go",
        "integration_github.go",
        "jamf.go",
        "jwt.go",
        "keys.go",
        "kubernetes.go",
        "kubernetes_server.go",
        "license.go",
        "lock.go",
        "maintenance.go",
        "matchers.go",
        "matchers_accessgraph.go",
        "matchers_aws.go",
        "matchers_azure.go",
        "matchers_gcp.go",
        "matchers_kube.go",
        "mfa.go",
        "namespace.go",
        "networking.go",
        "oidc.go",
        "oidc_external.go",
        "okta.go",
        "order.go",
        "plugin.go",
        "plugin_data.go",
        "plugin_static_credentials.go",
        "presence.go",
        "provisioning.go",
        "proxied_service.go",
        "register.go",
        "remotecluster.go",
        "resource.go",
        "resource_153.go",
        "resource_ids.go",
        "restrictions.go",
        "role.go",
        "saml.go",
        "saml_idp_service_provider.go",
        "second_factor.go",
        "semaphore.go",
        "server.go",
        "server_info.go",
        "session.go",
        "session_tracker.go",
        "sessionrecording.go",
        "signaturealgorithmsuite.go",
        "sortby.go",
        "statictokens.go",
        "system_role.go",
        "target_health.go",
        "traits.go",
        "trust.go",
        "trusted_device_requirement.pb.go",
        "trustedcluster.go",
        "tunnel.go",
        "tunnel_strategy.go",
        "tunnelconn.go",
        "types.pb.go",
        "ui_config.go",
        "user.go",
        "usergroup.go",
        "usertoken.go",
        "usertokensecrets.go",
        "watch_status.go",
    ],
    importpath = "github.com/gravitational/teleport/api/types",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//api/constants",
        "//api/defaults",
        "//api/gen/proto/go/attestation/v1:attestation",
        "//api/gen/proto/go/teleport/devicetrust/v1:devicetrust",
        "//api/gen/proto/go/teleport/header/v1:header",
        "//api/types/common",
        "//api/types/compare",
        "//api/types/samlsp",
        "//api/types/wrappers",
        "//api/utils",
        "//api/utils/atlas",
        "//api/utils/aws",
        "//api/utils/azure",
        "//api/utils/gcp",
        "//api/utils/iterutils",
        "//api/utils/keys",
        "//api/utils/keys/hardwarekey",
        "//api/utils/net",
        "//api/utils/tlsutils",
        "@com_github_charlievieth_strcase//:strcase",
        "@com_github_coreos_go_semver//semver",
        "@com_github_gogo_protobuf//gogoproto",
        "@com_github_gogo_protobuf//jsonpb",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//types",
        "@com_github_google_uuid//:uuid",
        "@com_github_gravitational_trace//:trace",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@com_github_russellhaering_gosaml2//:gosaml2",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//protoadapt",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_crypto//ssh",
    ],
)

go_test(
    name = "types_test",
    srcs = [
        "access_request_test.go",
        "app_test.go",
        "appserver_test.go",
        "assertion_info_test.go",
        "authentication_authpreference_test.go",
        "authentication_mfadevice_test.go",
        "authentication_test.go",
        "authority_test.go",
        "clone_test.go",
        "cluster_alert_test.go",
        "database_permissions_test.go",
        "database_test.go",
        "databaseserver_test.go",
        "desktop_test.go",
        "device_test.go",
        "duration_test.go",
        "events_test.go",
        "fuzz_test.go",
        "github_test.go",
        "instance_test.go",
        "integration_github_test.go",
        "integration_test.go",
        "jamf_test.go",
        "kubernetes_server_test.go",
        "kubernetes_test.go",
        "license_test.go",
        "lock_test.go",
        "maintenance_test.go",
        "matchers_aws_test.go",
        "matchers_azure_test.go",
        "matchers_gcp_test.go",
        "matchers_kube_test.go",
        "networking_test.go",
        "oidc_external_test.go",
        "okta_test.go",
        "plugin_test.go",
        "provisioning_test.go",
        "resource_153_test.go",
        "resource_ids_test.go",
        "resource_test.go",
        "role_test.go",
        "saml_idp_service_provider_test.go",
        "saml_test.go",
        "second_factor_test.go",
        "server_info_test.go",
        "server_test.go",
        "session_tracker_test.go",
        "sortby_test.go",
        "system_role_test.go",
        "target_health_test.go",
        "tunnel_strategy_test.go",
        "usergroup_test.go",
    ],
    embed = [":types"],
    deps = [
        "//api",
        "//api/constants",
        "//api/defaults",
        "//api/fixtures",
        "//api/gen/proto/go/teleport/devicetrust/v1:devicetrust",
        "//api/gen/proto/go/teleport/header/v1:header",
        "//api/gen/proto/go/teleport/machineid/v1:machineid",
        "//api/types/samlsp",
        "//api/types/wrappers",
        "//api/utils",
        "//api/utils/aws",
        "//api/utils/gcp",
        "@com_github_coreos_go_semver//semver",
        "@com_github_gogo_protobuf//proto",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_google_uuid//:uuid",
        "@com_github_gravitational_trace//:trace",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@com_github_russellhaering_gosaml2//:gosaml2",
        "@com_github_russellhaering_gosaml2//types",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_google_protobuf//protoadapt",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
