load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = [
        "addr.go",
        "bool.go",
        "cluster.go",
        "conv.go",
        "delegator.go",
        "protobuf.go",
        "proxy.go",
        "route.go",
        "slices.go",
        "strings.go",
        "time.go",
        "uri.go",
    ],
    importpath = "github.com/gravitational/teleport/api/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//api/constants",
        "//api/utils/aws",
        "@com_github_google_uuid//:uuid",
        "@com_github_gravitational_trace//:trace",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//protoadapt",
        "@org_golang_x_net//http/httpproxy",
    ],
)

go_test(
    name = "utils_test",
    srcs = [
        "addr_test.go",
        "protobuf_test.go",
        "proxy_test.go",
        "route_test.go",
        "slices_test.go",
        "strings_test.go",
        "uri_test.go",
    ],
    embed = [":utils"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_gravitational_trace//:trace",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_x_net//http/httpproxy",
    ],
)
