load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "backport_lib",
    srcs = ["main.go"],
    importpath = "github.com/gravitational/teleport/assets/backport",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gravitational_trace//:trace",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_binary(
    name = "backport",
    embed = [":backport_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "backport_test",
    srcs = ["main_test.go"],
    embed = [":backport_lib"],
    deps = ["@com_github_stretchr_testify//require"],
)
