load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "aws",
    srcs = ["doc.go"],
    importpath = "github.com/gravitational/teleport/e2e/aws",
    visibility = ["//visibility:public"],
)

go_test(
    name = "aws_test",
    srcs = [
        "databases_test.go",
        "eks_test.go",
        "fixtures_test.go",
        "main_test.go",
        "rds_test.go",
        "redshift_test.go",
    ],
    embed = [":aws"],
    deps = [
        "//:teleport",
        "//api/defaults",
        "//api/types",
        "//api/utils/keys",
        "//api/utils/retryutils",
        "//integration/helpers",
        "//integration/kube",
        "//lib",
        "//lib/auth",
        "//lib/auth/testauthority",
        "//lib/client",
        "//lib/cryptosuites",
        "//lib/defaults",
        "//lib/service",
        "//lib/service/servicecfg",
        "//lib/services",
        "//lib/srv/alpnproxy",
        "//lib/srv/alpnproxy/common",
        "//lib/srv/db/common",
        "//lib/srv/db/postgres",
        "//lib/tlsca",
        "//lib/utils",
        "//lib/utils/log/logtest",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_rds//:rds",
        "@com_github_aws_aws_sdk_go_v2_service_redshift//:redshift",
        "@com_github_aws_aws_sdk_go_v2_service_secretsmanager//:secretsmanager",
        "@com_github_go_mysql_org_go_mysql//client",
        "@com_github_go_mysql_org_go_mysql//mysql",
        "@com_github_gravitational_trace//:trace",
        "@com_github_jackc_pgconn//:pgconn",
        "@com_github_jackc_pgerrcode//:pgerrcode",
        "@com_github_jackc_pgx_v4//:pgx",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
    ],
)
