load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "desktop-registration_lib",
    srcs = ["main.go"],
    importpath = "github.com/gravitational/teleport/examples/desktop-registration",
    visibility = ["//visibility:private"],
    deps = [
        "//api/client",
        "//api/types",
    ],
)

go_binary(
    name = "desktop-registration",
    embed = [":desktop-registration_lib"],
    visibility = ["//visibility:public"],
)
