load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go-client_lib",
    srcs = ["main.go"],
    importpath = "github.com/gravitational/teleport/examples/go-client",
    visibility = ["//visibility:private"],
    deps = [
        "//api/client",
        "//api/types",
    ],
)

go_binary(
    name = "go-client",
    embed = [":go-client_lib"],
    visibility = ["//visibility:public"],
)
